--- a/src/components/AddCategory/style.scss
+++ b/src/components/AddCategory/style.scss
@@ -1,7 +1,7 @@
 .ui.card.add-category-card {
   width: 100%;
   overflow: hidden;
-  padding: 10px 20px 0 20px;
+  padding: 10px 20px 10px 20px;
   form {
     .ui.input {
       width: 100%;
