Added header for display tasks

--- a/src/components/DisplayTask/style.scss
+++ b/src/components/DisplayTask/style.scss
@@ -4,7 +4,16 @@
   font-size: 1.1em;
   opacity: 0.7;
 
+  .item.task-item-header {
+    font-weight: bold;
+    padding-bottom: 4px;
+  }
+
   .ui.label {
     margin-right: 5px;
+  }
+
+  .text-center {
+    text-align: center;
   }
 }
