Added animation when timer active

--- a/src/components/AddTask/style.scss
+++ b/src/components/AddTask/style.scss
@@ -9,6 +9,8 @@
     h3.duration-display {
       text-align: center;
       margin-top: 8px;
+      animation-duration: 2s;
+      animation-delay: 0.5s;
     }
   }
   h3.empty-message {
