--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,40 @@
 .text-center {
   text-align: center;
 }
+
+.pulsing {
+  display: block;
+  background: #61abf0;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgb(18, 181, 245, 0.8);
+  animation: pulsing 2s infinite;
+}
+.pulsing:hover {
+  animation: none;
+}
+
+@-webkit-keyframes pulsing {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgb(33, 133, 208, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgb(33, 133, 208, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgb(33, 133, 208, 0);
+  }
+}
+@keyframes pulsing {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgb(33, 133, 208, 0.4);
+    box-shadow: 0 0 0 0 rgb(33, 133, 208, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 10px rgb(33, 133, 208, 0);
+    box-shadow: 0 0 0 10px rgb(33, 133, 208, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgb(33, 133, 208, 0);
+    box-shadow: 0 0 0 0 rgb(33, 133, 208, 0);
+  }
+}
